[package]
name = "utest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde_yaml = "0.9.32"
clap = "4.5.1"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
log = "0.4.20"
env_logger = "0.11.2"
